# BrickGame-v-2.0

./: Doxyfile  Makefile  README.md
src/: CMakeLists.txt
src/brick_game/common/Action/: Action.h
src/brick_game/common/Info/: Info.c  Info.h
src/brick_game/common/ReferenceActor/: ReferenceActor.cpp  ReferenceActor.hpp
src/brick_game/common/ReferenceGame/: ReferenceClassGame.hpp
src/brick_game/common/Signal/: SignalProcessing.c  SignalProcessing.h
src/brick_game/common/State/: State.c  State.h
src/brick_game/common/Timer/: GameTimer.cpp  GameTimer.hpp
src/brick_game/snake/: AC_Snake.cpp  AC_Snake.hpp  GameSnake.cpp  GameSnake.hpp
src/brick_game/tetris/: GameAction.c  GameTetris.c  GameTetris.h  MacroInf.h  MacroPos.h
src/brick_game/tetris/FiniteStateMachines/: FiniteStateMachines.h
src/brick_game/tetris/FiniteStateMachines/Collision/: Collision.c  Collision.h
src/brick_game/tetris/Helpers/: GameTetrisHelpers.c  GameTetrisHelpers.h
src/brick_game/tetris/Model/: GameModel.c  GameModel.h
src/brick_game/tetris/Timer/: Timer.c  Timer.h
src/gui/cli/: MainWindow.c  MainWindow.h  main.cpp
src/gui/cli/UI/: GameUI.c  GameUI.h
src/gui/desktop/: main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  resource.qrc
src/gui/desktop/Controller/: Helpers.cpp  Helpers.hpp  QBaseController.hpp  SnakeController.cpp  SnakeController.hpp  TetrisController.cpp  TetrisController.hpp
src/gui/desktop/View/: GameView.cpp  GameView.hpp  GameViewDraw.cpp
src/tests/CheckTest/: test.c  test.h  test_fsm.c  test_helpers.c  test_type.c
src/tests/CheckTest/testfile/: bad_model.txt  two_model.txt
src/tests/GTest/: GT_TestActorSnake.cpp  GT_TestGameSnake.cpp  GT_main.hpp
(+17 files in other folders)
